# conduit-mime-types

./: CHANGELOG.md  Cargo.toml  build.rs
.github/workflows/: ci.yml
benches/: load-data.rs
generate-data-file/: Cargo.toml  generate.rs
src/: data.rs  lib.rs  mime-types.rs
