[package]

name = "conduit-mime-types"
version = "0.7.3"
authors = ["wycats@gmail.com"]
license = "MIT"
description = "MIME type definitions for conduit"
repository = "https://github.com/conduit-rust/mime-types"
edition = "2018"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
serde = "1.0"
serde_json = "1.0"

[[bench]]
name = "load-data"
harness = false
