[package]
name = "conduit-mime-types"
version = "0.8.0"
authors = ["wycats@gmail.com"]
license = "MIT"
description = "MIME type definitions for conduit"
repository = "https://github.com/conduit-rust/mime-types"
edition = "2018"

[build-dependencies]
phf_codegen = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
phf = "0.10.1"
